--- a/src/assets/dialog.css
+++ b/src/assets/dialog.css
@@ -1,2 +1,6 @@
 .dialog-panel {position:fixed; left: 50%; top: 200px; width: 500px; margin-left:-250px; z-index:99;}
 .dialog-shadow {position:fixed; left: 0; top:0; width:100%; height:100%; background:#000; opacity:0.3; z-index:98;}
+.dialog-content{
+    height: 400px;
+    overflow: scroll;
+}
